# db-dox-etl

./: .gitignore  README.md  main.py  pyproject.toml
app_settings/: __init__.py  models.py  utils.py
db_sources/: __init__.py  query_model.py  source_db.py
db_sources/queries/: registry.yaml
db_sources/queries/code/functions/: func_result_columns.sql
db_sources/queries/code/procedures/: proc_info.sql  proc_result_columns.sql
db_sources/queries/dim_columns/functions/: func_parameters.sql
db_sources/queries/dim_columns/procedures/: proc_parameters.sql
db_sources/queries/dim_columns/views/: view_columns.sql
db_sources/queries/dim_objects/core/: object_info.sql
db_sources/queries/dim_objects/functions/: func_info.sql
db_sources/queries/dim_objects/views/: view_info.sql
db_sources/queries/relational/constraints/: constraint_info.sql
db_sources/sql_scripts/: 01_core_database_info.sql  02_core_schema_info.sql  07_relational_constraint_column.sql  08_relational_foreign_key.sql  10_relational_index_info.sql  11_relational_index_column.sql  12_relational_index_included_column.sql  21_doc_extended_property.sql
db_target/: __init__.py  session.py
db_target/models/: meta.py
db_target/models/meta/: __init__.py  meta.py  meta_enums.py  meta_seed.py
definitions/: __init__.py  etl_definitions.py  etl_steps_and_phases.json
documentation/: documentation_metadata.v1.sqlserver.dbml
etl_logging/: README.md  __init__.py  etl_log_constants.json  etl_log_constants.py  etl_log_context.py  etl_logging.py  etl_step.py
sql/: documentation_metadata.v1.sqlserver.dbml
(+3 files in other folders)
