[project]
name = "db-dox-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.44",
    "sqlglot>=28.0.0",
]
[tool.hatch.metadata]
allow-direct-references = true


